--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
   </main>
 
   <footer>
-    <p>Horra Esports Community Stars 1st Edition</p>
+    <p>E-NEPAL GAMES</p>
   </footer>
+ <script src="script.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
