--- a/index.html
+++ b/index.html
@@ -3,73 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="WWCD Team Status for Grand Finals - Day 3">
   <title>WWCD Team Status</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Header Section -->
   <header>
     <div class="header-container">
-      <h1>WWCD TEAM STATUS</h1>
-      <h2>GRAND FINALS</h2>
-      <h3>DAY - 3</h3>
+      <h1 id="eventTitle">WWCD TEAM STATUS</h1>
+      <h2 id="eventStage">GRAND FINALS</h2>
+      <h3 id="eventDay">DAY - 3</h3>
     </div>
   </header>
 
+  <!-- Main Content Section -->
   <main>
-    <div class="team-status">
-      <!-- Player Card 1 -->
-      <div class="player-card">
-        <img src="https://via.placeholder.com/80x120" alt="Player Image" class="player-image">
-        <h3>KiYõūSOLTI</h3>
-        <div class="stats">
-          <p>Total Elims: <span>0</span></p>
-          <p>Elims Contribution: <span>0%</span></p>
-          <p>Damage Dealt: <span>308</span></p>
-          <p>Avg Survival: <span>25:29</span></p>
-        </div>
-      </div>
-
-      <!-- Player Card 2 -->
-      <div class="player-card">
-        <img src="https://via.placeholder.com/80x120" alt="Player Image" class="player-image">
-        <h3>HangSOLTI</h3>
-        <div class="stats">
-          <p>Total Elims: <span>4</span></p>
-          <p>Elims Contribution: <span>40%</span></p>
-          <p>Damage Dealt: <span>491</span></p>
-          <p>Avg Survival: <span>25:26</span></p>
-        </div>
-      </div>
-
-      <!-- Player Card 3 -->
-      <div class="player-card">
-        <img src="https://via.placeholder.com/80x120" alt="Player Image" class="player-image">
-        <h3>eLOCOíSOLTI</h3>
-        <div class="stats">
-          <p>Total Elims: <span>5</span></p>
-          <p>Elims Contribution: <span>50%</span></p>
-          <p>Damage Dealt: <span>713</span></p>
-          <p>Avg Survival: <span>25:45</span></p>
-        </div>
-      </div>
-
-      <!-- Player Card 4 -->
-      <div class="player-card">
-        <img src="https://via.placeholder.com/80x120" alt="Player Image" class="player-image">
-        <h3>PiKOPíkSOLTI</h3>
-        <div class="stats">
-          <p>Total Elims: <span>1</span></p>
-          <p>Elims Contribution: <span>10%</span></p>
-          <p>Damage Dealt: <span>75</span></p>
-          <p>Avg Survival: <span>09:16</span></p>
-        </div>
-      </div>
+    <div class="team-status" id="teamStatusContainer">
+      <!-- Player cards will be dynamically generated here -->
     </div>
   </main>
 
+  <!-- Footer Section -->
   <footer>
-    <p>E-NEPAL GAMES</p>
+    <p>&copy; 2024 E-NEPAL GAMES. All rights reserved.</p>
   </footer>
- <script src="script.js"></script> <!-- Link to your JavaScript file -->
+
+  <!-- JavaScript -->
+  <script src="script.js"></script>
 </body>
 </html>
