--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="BOOYAH Team Status for Grand Finals - Day 3">
   <title>BOOYAH Team Status</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"> <!-- Your CSS file -->
 </head>
 <body>
   <!-- Header Section -->
@@ -24,7 +24,12 @@
     </div>
   </main>
 
+  <!-- Footer Section (optional, you can remove if not needed) -->
+  <!-- <footer>
+    <p>Powered by Your Team</p>
+  </footer> -->
+
   <!-- JavaScript -->
-  <script src="script.js"></script>
+  <script src="script.js"></script> <!-- Link to the JavaScript file -->
 </body>
 </html>
