--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="BOOYAH Team Status for Grand Finals - Day 3">
   <title>BOOYAH Team Status</title>
-  <link rel="stylesheet" href="style.css"> <!-- Your CSS file -->
+  <link rel="stylesheet" href="style.css"> <!-- Link to the external CSS file -->
 </head>
-<body>
+<body style="background-color: #800080;"> <!-- Purple background color -->
+
   <!-- Header Section -->
   <header>
     <div class="header-container">
@@ -24,12 +25,12 @@
     </div>
   </main>
 
-  <!-- Footer Section (optional, you can remove if not needed) -->
+  <!-- Optional Footer Section -->
   <!-- <footer>
     <p>Powered by Your Team</p>
   </footer> -->
 
-  <!-- JavaScript -->
-  <script src="script.js"></script> <!-- Link to the JavaScript file -->
+  <!-- Link to the JavaScript file -->
+  <script src="script.js"></script>
 </body>
 </html>
