--- a/index.html
+++ b/index.html
@@ -3,34 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="BOOYAH Team Status for Grand Finals - Day 3">
-  <title>BOOYAH Team Status</title>
-  <link rel="stylesheet" href="style.css"> <!-- Link to the external CSS file -->
+  <title>WWCD Team Status</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color: #800080;"> <!-- Purple background color -->
-
-  <!-- Header Section -->
+<body>
   <header>
     <div class="header-container">
-      <h1 id="eventTitle">BOOYAH TEAM STATUS</h1>
+      <h1 id="eventTitle">WWCD TEAM STATUS</h1>
       <h2 id="eventStage">GRAND FINALS</h2>
-      <h3 id="eventDay">DAY - 1</h3>
+      <h3 id="eventDay">DAY - 3</h3>
     </div>
   </header>
 
-  <!-- Main Content Section -->
   <main>
-    <div class="team-status" id="teamStatusContainer">
-      <!-- Player cards will be dynamically generated here -->
+    <div id="teamStatusContainer" class="team-status">
+      <!-- Player cards will be dynamically injected here -->
     </div>
   </main>
 
-  <!-- Optional Footer Section -->
-  <!-- <footer>
-    <p>Powered by Your Team</p>
-  </footer> -->
-
-  <!-- Link to the JavaScript file -->
   <script src="script.js"></script>
 </body>
 </html>
