--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="WWCD Team Status for Grand Finals - Day 3">
   <title>WWCD Team Status</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Header Section -->
   <header>
     <div class="header-container">
       <h1 id="eventTitle">WWCD TEAM STATUS</h1>
@@ -15,11 +17,19 @@
     </div>
   </header>
 
+  <!-- Main Content Section -->
   <main>
-    <div id="teamStatusContainer" class="team-status">
-      <!-- Player cards will be dynamically injected here -->
+    <div class="team-status" id="teamStatusContainer">
+      <!-- Player cards will be dynamically generated here -->
     </div>
   </main>
+
+  <!-- Footer Section -->
+  <footer>
+    <p>&copy; 2024 E-NEPAL GAMES.</p>
+  </footer>
+
+  <!-- JavaScript -->
   <script src="script.js"></script>
 </body>
 </html>
