--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="WWCD Team Status for Grand Finals - Day 3">
-  <title>WWCD Team Status</title>
+  <meta name="description" content="BOOYAH Team Status for Grand Finals - Day 3">
+  <title>BOOYAH Team Status</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Header Section -->
   <header>
     <div class="header-container">
-      <h1 id="eventTitle">WWCD TEAM STATUS</h1>
-      <h2 id="eventStage">GRAND FINALS</h2>
-      <h3 id="eventDay">DAY - 3</h3>
+      <h1 id="eventTitle">Event Name</h1>
+      <h2 id="eventStage">Event Stage</h2>
+      <h3 id="eventDay">Event Day</h3>
     </div>
   </header>
 
@@ -23,11 +23,6 @@
       <!-- Player cards will be dynamically generated here -->
     </div>
   </main>
-
-  <!-- Footer Section -->
-  <footer>
-    <p>&copy; 2024 E-NEPAL GAMES.</p>
-  </footer>
 
   <!-- JavaScript -->
   <script src="script.js"></script>
