--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
   <main>
     <div class="team-status" id="teamStatusContainer">
       <!-- Player cards will be dynamically generated here -->
+
+      <!-- Example Player Card (for static reference, can be dynamically added in JavaScript) -->
+      <div class="player-card">
+        <img src="team-logo.png" alt="Team Logo" class="team-logo">
+        <img src="player-image.png" alt="Player Image" class="player-image">
+        <h3>Player Name</h3>
+        <div class="stats">
+          <p>Rank: <span>1</span></p>
+          <p>Points: <span>2000</span></p>
+        </div>
+      </div>
+
     </div>
   </main>
 
